fix vertical overflow of hand

--- a/app/assets/stylesheets/components/app-tab.scss
+++ b/app/assets/stylesheets/components/app-tab.scss
@@ -100,6 +100,7 @@ body.app {
     height: 100%;
     width: 100%;
     z-index: -1;
+    overflow: hidden;
 
     &__left {
       width: 65%;
